complete user, group, permission, article management in admin django

--- a/templates/shared/dashboard.html
+++ b/templates/shared/dashboard.html
@@ -451,7 +451,7 @@
 
             <!-- Article -->
             <li>
-                <a href="{% url 'userprofile_app:author_articles' %}">
+                <a href="{% url 'userprofile_app:articles_list' %}">
                     <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px">
                         <path d="M0 0h24v24H0V0z" fill="none"></path>
                         <path
