--- a/userprofile_app/templates/userprofile_app/groups/group_list.html
+++ b/userprofile_app/templates/userprofile_app/groups/group_list.html
@@ -54,65 +54,47 @@
 
             <!-- group table -->
             <div class="table-responsive pb-4">
-                <table class="table generic-table align-middle">
-                    <thead>
-                    <tr>
-                        <th scope="col">آیدی</th>
-                        <th scope="col">نام گروه</th>
-                        <th scope="col">مجوزها</th>
-                        <th scope="col">اقدام</th>
-                    </tr>
-                    </thead>
-
-
-                    <tbody>
-                    {% for group in group_list %}
+                <form method="post">
+                    {% csrf_token %}
+                    <table class="table generic-table align-middle">
+                        <thead>
                         <tr>
-
-                            <th scope="row">
-                                <a href="course-details.html" class="text-black">{{ group.id }}</a>
-                            </th>
-
-                            <td>{{ group.name }}</td>
-
-                            <td>
-                                {% for permission in group.permissions.all %}
-                                	<span>{{ permission }},</span>
-                                {% endfor %}
-
-                            </td>
-
-                            <td>
-                                <div class="card-action-wrap d-flex">
-                                    <a href="#"
-                                       class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-success"
-                                       data-toggle="tooltip" data-placement="top" title="مشاهده">
-                                        <i class="la la-eye"></i>
-                                    </a>
-                                    <a href="{% url 'userprofile_app:group_edit' pk=group.id %}"
-                                       class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-success"
-                                       data-toggle="tooltip" data-placement="top" title="ویرایش">
-                                        <i class="la la-edit"></i>
-                                    </a>
-                                    <a href="#"
-                                       class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-success"
-                                       data-toggle="tooltip" data-placement="top" title="حذف">
-                                        <i class="la la-trash"></i>
-                                    </a>
-                                    <form action="#" method="post" style="display:inline;">
-                                        <button type="submit"
-                                                class="icon-element icon-element-sm shadow-sm cursor-pointer ml-1 text-primary border-0"
-                                                data-toggle="tooltip" data-placement="top" title="تایید"
-                                                style="background: none;">
-                                            <i class="la la-check"></i>
-                                        </button>
-                                    </form>
-                                </div>
-                            </td>
+                            <th scope="col">گروه</th>
+                            <th scope="col">برنامه</th>
+                            <th scope="col">مدل</th>
+                            <th scope="col">ایجاد</th>
+                            <th scope="col">ویرایش</th>
+                            <th scope="col">حذف</th>
+                            <th scope="col">مشاهده</th>
                         </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                        </thead>
+
+                        <tbody>
+                        {% for group in groups %}
+                            {% for app, models in apps_dict.items %}
+                                {% for model_name, model_data in models.items %}
+                                    <tr>
+                                        <td>{{ group.name }}</td>
+                                        <td>{{ app }}</td>
+                                        <td>{{ model_data.verbose }}</td>
+                                        {% for action in actions %}
+                                            <td>
+                                                {% with codename=action|add:"_"|add:model_name %}
+                                                    <input type="checkbox"
+                                                           name="permissions_{{ group.id }}[]"
+                                                           value="{{ codename }}"
+                                                           {% if codename in group.codename_list %}checked{% endif %}>
+                                                {% endwith %}
+                                            </td>
+                                        {% endfor %}
+                                    </tr>
+                                {% endfor %}
+                            {% endfor %}
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <button type="submit" class="btn btn-primary mt-5">ذخیره</button>
+                </form>
             </div>
 
 
